fix: add margin above image on small screens

--- a/css/custom.css
+++ b/css/custom.css
@@ -107,6 +107,7 @@ label {
 @media (max-width: 992px) {
   img {
     margin-bottom: 50px;
+    margin-top: 50px;
     width: 80%;
   }
 }
